added imgs - currently broken

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>21 - Imported models</title>
-</head>
-<body>
-    <canvas class="webgl"></canvas>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>3D Ethereum model</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <canvas class="webgl"></canvas>
+      <div class="loader-container">
+        <div class="modal-btn">
+          <img src="./images/ethbtn.png" alt="broken img" />
+        </div>
+        <div class="loading-left"></div>
+        <div class="loading-right"></div>
+        <div class="loading-border"></div>
+
+        <div class="loading-svg">
+          <img src="./images/spinner.svg" alt="spinner" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
