--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
       <canvas class="webgl"></canvas>
       <div class="loader-container">
         <div class="modal-btn">
-          <img src="/src/images/ethbtn.png" alt="broken img" />
+          <img src="/public/images/ethbtn.png" alt="broken img" />
         </div>
         <div class="loading-left"></div>
         <div class="loading-right"></div>
         <div class="loading-border"></div>
 
         <div class="loading-svg">
-          <img src="/src/images/spinner.svg" alt="spinner" />
+          <img src="/public/images/spinner.svg" alt="spinner" />
         </div>
       </div>
 
